// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthRestakeVaultFactory EthErc20Vault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 602253,
}
`;

exports[`EthRestakeVaultFactory EthErc20Vault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 453419,
}
`;

exports[`EthRestakeVaultFactory EthErc20Vault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 578295,
}
`;

exports[`EthRestakeVaultFactory EthErc20Vault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 429461,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 528144,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 379310,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 504183,
}
`;

exports[`EthRestakeVaultFactory EthRestakeVault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 356,
  "gasUsed": 355349,
}
`;
